# shairdrop

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: ansihelp.h  sendhelp.h  shairdrop.h
src/: client.c  main.c  sendhelp.c  server.c  shairdrop.c
